# llm-projekt

./: .gitignore  .gitmodules  Justfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: main.py
data/eval/: test.jsonl
data/processed/chunked_notes/: chunked_notes.json
data/raw/notes/architektura-komputerow/: wyklad-01-wstep.md  wyklad-02-klasyfikacja-pamieci.md  (+20 more)
database/: Dockerfile  docker-compose.yml  init.sql
docs/: wytyczne.md
frontend/: biome.json  package-lock.json  package.json
frontend/src/: App.tsx  ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx  api.ts  main.tsx
frontend/src/components/: ChatWindow.tsx  InputBar.tsx  MarkdownText.tsx  MessageBubble.tsx  Sources.tsx
notebooks/: 01-embedding-model.ipynb  02-document-chunking.ipynb  03-chroma-db-integration.ipynb  04-llm-integration.ipynb  05-polish-language-models.ipynb  06-verify-chunking.ipynb  07-postgres-fulltext-search.ipynb  08-semantic-search.ipynb  09-generation-metrics.ipynb
notes_rag/api/: di.py  endpoints.py  main.py  schema.py
notes_rag/core/: __init__.py  config.py  generation.py  models.py  notes_repository.py  pipeline.py  retrieval.py  schema.py
notes_rag/core/db/: __init__.py  connection.py  model.py
notes_rag/eval/: dataset.py  pipeline.py  retrieval.py
notes_rag/scripts/: answer.py  document_chunking.py  evaluate_pipeline.py  evaluate_retrieval.py  gather_notes.py  index_documents.py  seed.py
reports/results/: pipeline_results_v1.csv  pipeline_results_v2.csv  retrieval_results_v1.csv  retrieval_results_v2.csv
scripts/: document_chunking.py  gather_notes.py
(+401 files in other folders)
