[project]
name = "llm-projekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "chromadb>=1.3.4",
    "fastapi[standard]>=0.121.0",
    "langchain-text-splitters>=1.0.0",
    "markupsafe==2.1.3",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.45",
    "torch==2.7.1+cu118",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "duckdb>=1.4.3",
    "jupyter>=1.1.1",
    "notebook>=7.1.3",
    "pandas>=2.3.3",
]

[[tool.uv.index]]
# This is for ensuring a torch version that is compatible with my NVIDIA GeForce GTX 1060 6GB GPU
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
